# CPUTempNotify

./: README.md  pyproject.toml
cputempnotify/: app.py
